# nuggetspythonpacks

./: .gitignore  README.md  project.py
nppt/: LICENSE.txt  README.md  pyproject.toml
nppt/src/nppt/: __about__.py  __init__.py
