[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nppt"
version = ["0.0.1"]
description = 'NPPT - or Nugs Python Pack TEST is a test for my first package. it uses hatch so have it installed!'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Kai Kawaii", email = "103155299+Itsyobestnugget@users.noreply.github.com" },
]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Itsyobestnugget/nuggetspythonpacks/blob/main/README.md"
Issues = "https://github.com/Itsyobestnugget/nuggetspythonpacks/issues"
Source = ""

[tool.hatch.version]
path = "src/nppt/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/nppt tests}"

[tool.coverage.run]
source_pkgs = ["nppt", "tests"]
branch = true
parallel = true
omit = [
  "src/nppt/__about__.py",
]

[tool.coverage.paths]
nppt = ["src/nppt", "*/nppt/src/nppt"]
tests = ["tests", "*/nppt/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
